--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,11 @@
 <resources>
 	<string name="app_name">AL Dict</string>
+
+	<string name="new_word">New Word</string>
+	
+	<string name="word">Word</string>
+	<string name="translation">Translation</string>
+	<string name="transcription">Transcription</string>
+	<string name="synonyms">Synonyms</string>
+	<string name="topic">Topic</string>
 </resources>
