--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,6 +8,7 @@
 	<string name="transcription">Transcription</string>
 	<string name="synonyms">Synonyms</string>
 	<string name="topic">Topic</string>
+	<string name="note">Note</string>
 
 	<string name="submit">Submit</string>
 </resources>
